# boilerplate-opengl-sdl2-cmake

./: CMakeLists.txt  buffers.cpp  buffers.h  frag.glsl  main.cpp  shader.cpp  shader.h  vert.glsl  window.cpp  window.h
